# nanocld

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  TODO.md  UTILS.md  build.rs  codecov.yml  diesel.toml  entrypoint.dev.sh  entrypoint.sh
.github/workflows/: release.yml  rust.yml  tests.yml  ubuntu_test.yml
doc/: nanocld.md
fake_path/etc/nanocl/: containerd.conf  dockerd.json
fake_path/etc/qemu/: bridge.conf
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2022-05-20-134629_create_namespaces/: up.sql
migrations/2022-05-22-113739_create_git_repositories/: down.sql  up.sql
migrations/2022-06-03-104124_create_clusters/: down.sql  up.sql
migrations/2022-06-13-102206_git_repository_branches/: down.sql  up.sql
migrations/2022-06-15-072243_cluster_networks/: up.sql
migrations/2022-06-15-072243_create_cluster_networks/: down.sql
migrations/2022-06-17-122356_create_cargos/: up.sql
migrations/2022-06-25-125147_create_nginx_templates/: down.sql  up.sql
migrations/2022-06-28-120411_create_cluster_variables/: down.sql  up.sql
migrations/2022-06-29-111434_create_cargo_instances/: down.sql  up.sql
migrations/2022-06-29-111434_create_cluster_cargoes/: down.sql  up.sql
migrations/2022-07-03-110833_create_cargo_environements/: down.sql  up.sql
migrations/2022-08-04-214925_create_nodes/: up.sql
migrations/2022-08-05-071819_create_virtual_machine_images/: up.sql
migrations/2022-08-05-071820_create_virtual_machines/: down.sql  up.sql
migrations/2022-08-05-071827_create_virtual_machine_images/: down.sql  up.sql
scripts/: install_nanocl.sh  pre_start_nanocl.dev.sh  pre_start_nanocl.sh  release_nanocld.sh  test_musl.sh  version_patch.sh
specs/v1/: swagger.json
src/: boot.rs  cli.rs  config.rs  errors.rs  install.rs  main.rs  models.rs  openapi.rs  schema.rs  server.rs  utils.rs  version.rs
src/components/: dnsmasq.rs  etcd.rs  mod.rs  nginx.rs  postgresql.rs  utils.rs
src/controllers/: README.md  cargo.rs  cluster.rs  cluster_cargo.rs  cluster_network.rs  cluster_variable.rs  container.rs  container_image.rs  dns.rs  dnsmasq.rs  git_repository.rs  mod.rs  namespace.rs  nginx.rs  nginx_log.rs  nginx_template.rs  node.rs  proxy.rs  specs.rs  store.rs  utils.rs  virtual_machine.rs  virtual_machine_images.rs  vpn.rs
src/events/: system.rs
src/hypervisor/: error.rs  lib.rs  mod.rs  qemu.rs
src/models/: cargo.rs  cargo_env.rs  cargo_image.rs  cargo_instance.rs  cluster.rs  cluster_cargo.rs  cluster_network.rs  cluster_variable.rs  config.rs  container.rs  container_image.rs  git_repository.rs  git_repository_branch.rs  mod.rs  namespace.rs  nginx_log.rs  nginx_template.rs  node.rs  openapi.rs  proxy_template.rs  state.rs  virtual_machine.rs  virtual_machine_image.rs
src/repositories/: README.md  cargo.rs  cargo_env.rs  cargo_instance.rs  cluster.rs  cluster_cargo.rs  cluster_network.rs  cluster_variable.rs  git_repository.rs  git_repository_branch.rs  mod.rs  namespace.rs  nginx_log.rs  nginx_template.rs  node.rs  proxy_template.rs  virtual_machine.rs  virtual_machine_image.rs
src/services/: README.md  cargo.rs  cargo_image.rs  cargo_instance.rs  cluster.rs  cluster_cargo.rs  cluster_network.rs  cluster_variable.rs  container.rs  container_image.rs  dnsmasq.rs  docker.rs  git_repository.rs  github.rs  ipsec.rs  mod.rs  namespace.rs  nginx.rs  node.rs  postgresql.rs  proxy_template.rs  system.rs  utils.rs  virtual_machine.rs  virtual_machine_image.rs  virtual_machine_images.rs
src/state/: config.rs  init.rs  mod.rs
src/utils/: cargo.rs  cargo_image.rs  cargo_instance.rs  cluster.rs  cluster_network.rs  cluster_variable.rs  container.rs  docker.rs  git_repository.rs  github.rs  ipsec.rs  key.rs  mod.rs  nginx.rs  node.rs  postgresql.rs
tests/: simple_scenario.rs
(+7 files in other folders)
