[package]
name = "nanocld"
version = "0.1.1"
edition = "2021"

[features]
default = []
openapi = ["dep:utoipa"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
r2d2 = "0.8"
log = "0.4.17"
regex = "1.5.6"
futures = "0.3"
bollard = "0.12"
chrono = "0.4.19"
notify = "4.0.17"
serde_yaml = "0.8"
env_logger = "0.8"
mustache = "0.9.0"
thiserror = "1.0.24"
serde_json = "1.0.82"
clap = { version = "3.1.8", features = ["derive"] }
url = { version = "2", features = ["serde"] }
serde = { version = "1.0.140", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
ntex = { version = "=0.5.24", features = ["rustls", "tokio"] }
diesel_migrations = "1.4.0"
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
# Dependency required with feature openapi
utoipa = { version = "1.0.2", features = ["uuid", "chrono"], optional = true }
