[package]
name = "nanocld"
version = "0.1.2"
edition = "2021"

[features]
default = []
openapi = ["dep:utoipa"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[build-dependencies]
clap = { version = "3.2.22", features = ["derive"] }
clap_mangen = { version = "0.1" }

[dependencies]
r2d2 = "0.8"
log = "0.4.17"
regex = "1.5.6"
futures = "0.3"
bollard = "0.13"
serde_yaml = "0.9"
env_logger = "0.9"
mustache = "0.9.0"
etcd-client = "0.10"
thiserror = "1.0.36"
serde_json = "1.0.82"
diesel_migrations = "2.0.0"
clap = { version = "3.2.22", features = ["derive"] }
url = { version = "2", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde"]}
notify = { version = "5.0.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
ntex = { version = "=0.5.27", features = ["rustls", "tokio"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid"] }

# Dependency required with feature openapi
utoipa = { version = "2.2.0", features = ["uuid", "chrono"], optional = true }
