[package]
name = "nanocld"
version = "0.1.15"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "The Self-Sufficient Hybrid-Cloud Orchestrator Daemon"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
repository = "https://github.com/nxthat/nanocld"

[[bin]]
name = "nanocld"
test = true
bench = false
path = "src/main.rs"

[features]
default = []
dev = ["dep:utoipa"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[build-dependencies]
clap = { version = "4.0.15", features = ["derive"] }
clap_mangen = { version = "0.2" }

[dependencies]
r2d2 = "0.8"
log = "0.4.17"
regex = "1.5.6"
futures = "0.3"
bollard = "0.13"
serde_yaml = "0.9"
env_logger = "0.9"
mustache = "0.9.0"
thiserror = "1.0.37"
serde_json = "1.0.86"
diesel_migrations = "2.0.0"
clap = { version = "4.0.15", features = ["derive"] }
url = { version = "2", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde"]}
notify = { version = "5.0.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
ntex = { version = "=0.5.29", features = ["rustls", "tokio"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
diesel = { version = "2.0.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
# Dependency required with dev feature
utoipa = { version = "2.2.0", features = ["uuid", "chrono"], optional = true }
